<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoanActivity">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:titleTextColor="#FFF"
        app:title="@string/loan_title"
        android:elevation="4dp"/>
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_marginTop="56dp"
      android:padding="10dp">
    <TextView
        android:id="@+id/text_loan_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loan_not_found"
        android:textSize="18sp"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_apply_for_loan"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/label_apply_for_loan"
        android:onClick="openMainLoanActivity"/>

  </LinearLayout>
</FrameLayout>