<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FundTransferActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:titleTextColor="#FFF"
            app:title="@string/fund_transfer_title"
            android:elevation="4dp"/>

    </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
        <TextView
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_transfer_to"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_select_bank"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginBottom="20dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_payee"
            android:layout_margin="3dp"
            android:id="@+id/payee_text_input"
            style="@style/Widget.Banking.TextInputLayout"
            app:errorEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/payee_edit_text"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_account_no"
            android:layout_margin="3dp"
            android:id="@+id/account_no_text_input"
            style="@style/Widget.Banking.TextInputLayout"
            app:errorEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/account_no_edit_text"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_IFSC"
            android:layout_margin="3dp"
            android:id="@+id/IFSC_text_input"
            style="@style/Widget.Banking.TextInputLayout"
            app:errorEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/IFSC_edit_text"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_amount"
            android:layout_margin="3dp"
            android:id="@+id/amount_text_input"
            style="@style/Widget.Banking.TextInputLayout"
            app:errorEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/amount_edit_text"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_remarks"
            android:layout_margin="3dp"
            android:id="@+id/remarks_text_input"
            style="@style/Widget.Banking.TextInputLayout"
            app:errorEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/remarks_edit_text"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_transfer_from"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:id="@+id/from_text_input"
            style="@style/Widget.Banking.TextInputLayout"
            app:errorEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/from_edit_text"
                android:maxLines="1"
                android:enabled="false"
                android:focusable="false"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/button_fund_transfer"
            android:text="@string/button_submit"
            android:backgroundTint="@color/colorAccent"/>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:visibility="gone"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

</FrameLayout>